<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="app_license"
        android:title="@string/preferences_app_license"
        android:summary="@string/app_license"/>

    <Preference
        android:title="@string/preference_app_source_code"
        android:summary="@string/preference_app_source_code_summary">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_source_code"/>
    </Preference>

    <Preference
        android:title="@string/preference_support"
        android:summary="@string/preference_support_summary">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_support"/>
    </Preference>

    <Preference
        android:key="app_author"
        android:title="@string/preference_app_author"
        android:summary="@string/app_author">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_author"/>
    </Preference>

    <Preference
        android:key="app_version"
        android:title="@string/preferences_app_version"/>

</androidx.preference.PreferenceScreen>